# tox-weechat

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md
build-scripts/arch/: PKGBUILD
cmake/: FindLdns.cmake  FindTox.cmake  FindWeeChat.cmake
misc/: getnodes.py
src/: tox-weechat-chats.c  tox-weechat-chats.h  tox-weechat-commands.c  tox-weechat-commands.h  tox-weechat-completion.c  tox-weechat-completion.h  tox-weechat-config.c  tox-weechat-config.h  tox-weechat-data.c  tox-weechat-data.h  tox-weechat-friend-requests.c  tox-weechat-friend-requests.h  tox-weechat-gui.c  tox-weechat-gui.h  tox-weechat-identities.c  tox-weechat-identities.h  tox-weechat-json.c  tox-weechat-json.h  tox-weechat-messages.c  tox-weechat-messages.h  tox-weechat-tox-callbacks.c  tox-weechat-tox-callbacks.h  tox-weechat-tox.c  tox-weechat-tox.h  tox-weechat-utils.c  tox-weechat-utils.h  tox-weechat.c  tox-weechat.h  twc-bootstrap.c  twc-bootstrap.h  twc-chat.c  twc-chat.h  twc-commands.c  twc-commands.h  twc-completion.c  twc-completion.h  twc-config.c  twc-config.h  twc-data.c  twc-data.h  (+24 more)
